cmake_minimum_required(VERSION 3.29)
project(cpp_Plus)

set(CMAKE_CXX_STANDARD 17)

# 添加头文件目录
add_library(headers INTERFACE)
include_directories(headers INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/headers)

add_executable(templete_element cources/template/templete_element.cpp)
add_executable(templete_sort cources/template/templete_sort.cpp)
add_executable(template_regulation cources/template/template_regulation.cpp)
add_executable(template_lemit cources/template/template_lemit.cpp)
add_executable(template_class cources/template/template_class.cpp)
add_executable(template_class_function cources/template/template_class_function.cpp)
add_executable(template_classfunction_creation cources/template/template_classfunction_creation.cpp)
add_executable(template_class_as_func_para cources/template/template_class_as_func_para.cpp)
add_executable(template_class_extend cources/template/template_class_extend.cpp)
add_executable(template_class_outer_func cources/template/template_class_outer_func.cpp)
add_executable(template_class_divide cources/template/template_class_divide/template_class_divide.cpp)
add_executable(template_class_friend cources/template/template_class_friend.cpp)
add_executable(MyArray cources/template/case/MyArray.cpp)
add_executable(container_save_data cources/standard_template_library/element/container_save_data.cpp)
add_executable(container_save_person_data cources/standard_template_library/element/container_save_person_data.cpp)
add_executable(container_nest cources/standard_template_library/element/container_nest.cpp)
add_executable(string_element cources/standard_template_library/string_container/string_element.cpp)
add_executable(string_assign cources/standard_template_library/string_container/string_assign.cpp)
add_executable(string_append cources/standard_template_library/string_container/string_append.cpp)
add_executable(string_find_replace cources/standard_template_library/string_container/string_find_replace.cpp)
add_executable(string_compare cources/standard_template_library/string_container/string_compare.cpp)
add_executable(string_at cources/standard_template_library/string_container/string_at.cpp)
add_executable(string_insert_erase cources/standard_template_library/string_container/string_insert_erase.cpp)
add_executable(string_substr cources/standard_template_library/string_container/string_substr.cpp)
add_executable(vector_structure cources/standard_template_library/vector_container/vector_structure.cpp)
add_executable(vector_assign cources/standard_template_library/vector_container/vector_assign.cpp)
add_executable(vector_capacity_size cources/standard_template_library/vector_container/vector_capacity_size.cpp)
add_executable(vector_insert_erase cources/standard_template_library/vector_container/vector_insert_erase.cpp)
add_executable(vector_at cources/standard_template_library/vector_container/vector_at.cpp)
add_executable(vector_swap cources/standard_template_library/vector_container/vector_swap.cpp)
add_executable(vector_reserve cources/standard_template_library/vector_container/vector_reserve.cpp)
add_executable(deque_structure cources/standard_template_library/deque_container/deque_structure.cpp)
add_executable(deque_assign cources/standard_template_library/deque_container/deque_assign.cpp)
add_executable(deque_compare cources/standard_template_library/deque_container/deque_size.cpp)
add_executable(deque_insert_erase cources/standard_template_library/deque_container/deque_insert_erase.cpp)
add_executable(deque_at cources/standard_template_library/deque_container/deque_at.cpp)
add_executable(deque_sort cources/standard_template_library/deque_container/deque_sort.cpp)
add_executable(score cources/standard_template_library/case/score.cpp)
add_executable(stack_element cources/standard_template_library/stack_container/stack_element.cpp)
add_executable(queue_element cources/standard_template_library/queue_container/queue_element.cpp)
add_executable(list_element cources/standard_template_library/list_container/list_element.cpp)
add_executable(list_construct cources/standard_template_library/list_container/list_construct.cpp)
add_executable(list_assign_swap cources/standard_template_library/list_container/list_assign_swap.cpp)
add_executable(list_size cources/standard_template_library/list_container/list_size.cpp)
add_executable(list_insert_clear cources/standard_template_library/list_container/list_insert_clear.cpp)
add_executable(list_get cources/standard_template_library/list_container/list_get.cpp)
add_executable(list_sort_reverse cources/standard_template_library/list_container/list_sort_reverse.cpp)
add_executable(list_sort_case cources/standard_template_library/list_container/list_sort_case.cpp)
add_executable(set_construct cources/standard_template_library/set_container/set_construct.cpp)
add_executable(set_size_swap cources/standard_template_library/set_container/set_size_swap.cpp)
add_executable(set_insert_erase cources/standard_template_library/set_container/set_insert_erase.cpp)
add_executable(set_find_count cources/standard_template_library/set_container/set_find_count.cpp)
add_executable(set_multiset_diff cources/standard_template_library/set_container/set_multiset_diff.cpp)
add_executable(pair_consturct cources/standard_template_library/pair/pair_consturct.cpp)
add_executable(set_sort cources/standard_template_library/set_container/set_sort.cpp)
add_executable(map_element cources/standard_template_library/map_container/map_element.cpp)
add_executable(map_consturct cources/standard_template_library/map_container/map_consturct.cpp)
add_executable(map_size_swap cources/standard_template_library/map_container/map_size_swap.cpp)
add_executable(map_insert_erase cources/standard_template_library/map_container/map_insert_erase.cpp)
add_executable(map_find_count cources/standard_template_library/map_container/map_find_count.cpp)
add_executable(map_sort cources/standard_template_library/map_container/map_sort.cpp)
add_executable(employee_grouping cources/standard_template_library/case/employee_grouping.cpp)
add_executable(function_object_element cources/standard_template_library/function_object/function_object_element.cpp)
add_executable(predicate cources/standard_template_library/function_object/predicate.cpp)